# cygnus

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.sqlx/: query-929f38278ab770ffb61b5d4957b46f538dd330aff5c71bfb248e97f161709771.json
cygnus_models/: Cargo.toml
cygnus_models/src/: ability.rs  background.rs  character.rs  characteristics.rs  class.rs  feat.rs  item.rs  lib.rs  proficiencies.rs  psionics.rs  race.rs  senses.rs  skill.rs  skills.rs  slot.rs  spell.rs  units.rs
cygnus_tui/: Cargo.toml
cygnus_tui/src/: app.rs  handler.rs  lib.rs  main.rs  tui.rs  ui.rs  widgets.rs
cygnus_utils/: Cargo.toml
cygnus_utils/src/: lib.rs  lower_bound_map.rs
migrations/: 0001_create_items_table.sql
src/: ability.rs  character.rs  class.rs  db_test.rs  dice.rs  feature.rs  item.rs  lib.rs  main.rs  modifiers.rs  personality.rs  race.rs  skill.rs  slot.rs  spell.rs  tui.rs  tui_test.rs
src/utils/: lower_bound_map.rs
src/view/: tui.rs
