[package]
name = "cygnus"
version = "0.1.0"
edition = "2021"
default-run = "cygnus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "tui_test"
path = "src/tui_test.rs"

[[bin]]
name = "db_test"
path = "src/db_test.rs"
